Added anomaly detection.

--- a/tools/FogML_SDK_Tools_Zephyr.ipynb
+++ b/tools/FogML_SDK_Tools_Zephyr.ipynb
@@ -20,13 +20,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZC5jiXiTgsYV",
-        "outputId": "2391f1a1-524c-4df9-ab46-cc0154210cb6"
+        "outputId": "d98d912d-c14f-44cc-fca9-f675bd8edf70"
       },
       "outputs": [
         {
@@ -34,10 +34,7 @@
           "name": "stdout",
           "text": [
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
-            "Collecting fogml\n",
-            "  Downloading fogml-0.0.5-py3-none-any.whl (22 kB)\n",
-            "Installing collected packages: fogml\n",
-            "Successfully installed fogml-0.0.5\n"
+            "Requirement already satisfied: fogml in /usr/local/lib/python3.7/dist-packages (0.0.6)\n"
           ]
         }
       ],
@@ -47,7 +44,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 10,
       "metadata": {
         "id": "0i0v8FX3g91Q"
       },
@@ -90,7 +87,7 @@
       "metadata": {
         "id": "-YAxSmalzVy_"
       },
-      "execution_count": 17,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -126,9 +123,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "C0PEobsNv_wp",
-        "outputId": "80889be6-9e00-4293-d2ca-4490ea9b58c8"
+        "outputId": "01a29a88-579e-45e2-e7a9-37de75f567b0"
       },
-      "execution_count": 18,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -142,13 +139,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 14,
       "metadata": {
         "id": "AGwuKgYEg34S",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c919841a-7d4b-491b-c4c0-d226a5353360"
+        "outputId": "9c84544c-f104-4287-c361-45beae60d25d"
       },
       "outputs": [
         {
@@ -184,7 +181,7 @@
       "metadata": {
         "id": "7PCqY10ipcx-"
       },
-      "execution_count": 20,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -194,6 +191,51 @@
       ],
       "metadata": {
         "id": "gCN5nxTTLwSs"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# FogML KMeans Anomaly Detector Generation"
+      ],
+      "metadata": {
+        "id": "f6wWRS_UEJOm"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.preprocessing import MinMaxScaler\n",
+        "from fogml.anomaly import KMeansAnomalyDetector\n",
+        "from fogml.generators import GeneratorFactory\n",
+        "\n",
+        "scaler = MinMaxScaler()\n",
+        "transformer = scaler.fit(spX)\n",
+        "data_norm = transformer.transform(spX)\n",
+        "\n",
+        "anomalyDetector = KMeansAnomalyDetector(n_clusters=16)\n",
+        "anomalyDetector.fit(data_norm)\n",
+        "\n",
+        "factory = GeneratorFactory()\n",
+        "generator = factory.get_generator(transformer)\n",
+        "generator.generate(fname=\"min_max_scaler_model.c\")\n",
+        "\n",
+        "generator = factory.get_generator(anomalyDetector)\n",
+        "generator.generate(fname=\"kmeans_anomaly_model.c\")"
+      ],
+      "metadata": {
+        "id": "9Aww2z5ZEII2"
+      },
+      "execution_count": 19,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Copy generated `kmeans_anomaly_model.c` and `min_max_scaler_model.c` to the folder `fogml_generated` in the MCU project."
+      ],
+      "metadata": {
+        "id": "SMoAemXkFf5O"
       }
     },
     {
@@ -236,9 +278,9 @@
           "height": 297
         },
         "id": "ozcNCRfDJ2T9",
-        "outputId": "9505a0be-9e05-44f6-8552-d2c60ff973db"
+        "outputId": "deaa72f5-bb7f-4afd-b8e9-528476d241ee"
       },
-      "execution_count": 21,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "display_data",
@@ -258,7 +300,6 @@
   "metadata": {
     "colab": {
       "collapsed_sections": [],
-      "name": "FogML_SDK_Tools_Zephyr.ipynb",
       "provenance": []
     },
     "kernelspec": {
